  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists
  anymore Windows is the only DOS derived OS, so use OperatingSystem.isWindows()
  instead (Matthieu Casanova)

}}}
{{{ Editing

- Using no highlight or limited syntax highlight in large buffers now also disable
  soft wrap (Matthieu Casanova)

- Latex Indentation a nuisance (# 3432974)

- Made it possible to disable automatic indentation by buffer or by edit
  mode, and created a status widget to toggle the setting (Evan Wright)

- Fix for tracker 2976661, script tag attributes not syntax highlighted.
  (Dale Anson)

- Fix for tracker 3165177, method/function names not always highlighted.
  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)

}}}
{{{ UI

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using
  OS X and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

}}}
{{{ Miscellaneous

- The EditingOptionPane has now an option to remember the user choice about large file
  treatment (Matthieu Casanova)

- Removed 192mb heap size limit from startup scripts.
  Removed jedit.l4j.ini from Windows package files because no options were left.

- OS/2 tasks were removed from the Java installer as OS/2 does not
  have a working Java 6 implementation and probably never will have
  (Björn "Vampire" Kautler)

- jEdit support for keymaps (Matthieu Casanova)

- Settings directory migrated to %APPDATA%/jEdit on Windows